Practica 2 - Juan Diego Torres

--- a/Practica 2/ReadMe
+++ b/Practica 2/ReadMe
@@ -4,8 +4,8 @@
 **Asignatura:** Programación y Plataformas Web  
 **Unidad:** 1.2 – Estándares Web  
 **Estudiante:** [Juan Diego Torres]  
-**Repositorio:** [https://github.com/TU_USUARIO/TU_REPO](https://github.com/TU_USUARIO/TU_REPO)  
-**Página desplegada (GitHub Pages):** [https://TU_USUARIO.github.io/TU_REPO/](https://TU_USUARIO.github.io/TU_REPO/)
+**Repositorio:** [https://github.com/diegotorres006/icc-ppw-u1-miPrimeraPagina](https://github.com/diegotorres006/icc-ppw-u1-miPrimeraPagina)  
+**Página desplegada (GitHub Pages):** [https://github.com/diegotorres006/icc-ppw-u1-miPrimeraPagina](https://TU_USUARIO.github.io/TU_REPO/)
 
 ---
 
